@@ -1,4 +1,3 @@
 #!/bin/sh
 
-screen -m java -Xms2G -Xmx30G -XX:MaxPermSize=128M -jar spigot.jar
-
+screen -m java -Xms2G -Xmx30G -jar spigot.jar
